--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="relative w-full h-72 bg-cover bg-center flex items-center justify-center text-white shadow-lg" style="background-image: url('https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&w=1400&q=80');">
     <div class="bg-black bg-opacity-50 p-8 rounded-xl">
       <h1 class="text-4xl font-bold mb-2">👋 I'm Chau Bui</h1>
-      <p class="text-lg">DevOps Engineer | Cloud Infrastructure | Automation Enthusiast</p>
+      <p class="text-lg">DevOps Engineer | Cloud Infrastructure | Site Reliability Engineering</p>
     </div>
   </header>
 
@@ -60,6 +60,17 @@
           <li>Deployed and managed scalable systems on AWS and on-premise.</li>
           <li>Implemented Kafka clusters, MinIO, Airbyte, and Lakehouse architectures.</li>
           <li>Automated infrastructure with Terraform & Ansible.</li>
+          <li>Designed and deployed for data lakehouse system.</li>
+          <li>Migration server and services to Cloud.</li>
+          <li>Designed and deployed highly available and scalable Kafka clusters for real-time data streaming across multiple environments (DEV, STG, PROD).</li>
+          <li>Setup, deployed and maintain the CI/CD pipelines for services, applications.</li>
+          <li>Led cloud migration projects for large-scale systems.</li>
+          <li>Hands on with engineering teams to do daily production deployment.</li>
+          <li>Monitoring system and write bash scripts.</li>
+          <li>Hands on with engineering teams to do daily production deployment.</li>
+          <li>Monitoring system and write bash scripts.</li>
+          <li>Containerization & Orchestration: Docker, Kubernetes, EKS.</li>
+          <li>Monitoring: Grafana, ELK.</li>
         </ul>
       </div>
       <div>
@@ -101,7 +112,7 @@
 
   <section class="max-w-5xl mx-auto px-6 py-12 text-center">
     <h2 class="text-2xl font-bold mb-4">Contact</h2>
-    <p>📧 <a href="mailto:chau.bui@example.com" class="text-blue-600 hover:underline">chau.bui@example.com</a></p>
+    <p>📧 <a href="mailto:minhchau.utc@gmail.com" class="text-blue-600 hover:underline">chau.bui@example.com</a></p>
     <p class="mt-2">
       <a href="https://github.com/chau-bui" target="_blank" class="text-gray-700 hover:text-black mx-2">GitHub</a> |
       <a href="https://linkedin.com/in/chau-bui" target="_blank" class="text-gray-700 hover:text-black mx-2">LinkedIn</a>
