--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
           <li>Developed and managed infrastructure on AWS and Azure.</li>
           <li>Built Docker/Kubernetes environments and automated deployments.</li>
           <li>Used Terraform for infrastructure provisioning and Grafana for monitoring.</li>
+          <li>Worked in DevOps team in the integration Maintain and support Developer team fix error system and deploy repositorys to server.</li>
+          <li>Hands on with engineering teams to do daily production deployment.</li>
+          <li>Monitor applications performance to effectively detect/predict/prevent issues related to application performance.</li>
+          <li>Perform configuration management, automatizing and dockerizing existing processes, applications, and services.</li>
+          <li>Worked in DevOps team in the integration environment with virtual cloud hybrid service developing and working on to plan, deploy and deliver strategic solutions. .</li>
+          <li>Built Docker/Kubernetes environments and automated deployments.</li>
+          <li>Containerization & Orchestration: Docker, Kubernetes, EKS.</li>
+          <li>Monitoring: Grafana, ELK.</li>
+          <li>CICD Tool: Jenkins, Gitlab, Argo CD</li>
         </ul>
       </div>
       <div>
@@ -112,7 +121,7 @@
 
   <section class="max-w-5xl mx-auto px-6 py-12 text-center">
     <h2 class="text-2xl font-bold mb-4">Contact</h2>
-    <p>📧 <a href="mailto:minhchau.utc@gmail.com" class="text-blue-600 hover:underline">chau.bui@example.com</a></p>
+    <p>📧 <a href="mailto:minhchau.utc@gmail.com" class="text-blue-600 hover:underline">minhchau.utc@gmail.com</a></p>
     <p class="mt-2">
       <a href="https://github.com/chau-bui" target="_blank" class="text-gray-700 hover:text-black mx-2">GitHub</a> |
       <a href="https://linkedin.com/in/chau-bui" target="_blank" class="text-gray-700 hover:text-black mx-2">LinkedIn</a>
