--- a/index.html
+++ b/index.html
@@ -50,6 +50,21 @@
   </section>
 
   <section class="max-w-5xl mx-auto px-6 py-12">
+    <h2 class="text-2xl font-bold mb-4">SKILL</h2>
+    <ul class="list-disc ml-6">
+      <li>Languages: Bash, yaml</li>
+      <li>OS: Windows, Ubuntu, Amazon Linux</li>
+      <li>Database: MySQL, RDS, Redis, Elasticsearch Clickhouse, Postgres </li>
+      <li>Cloud Computing: Amazon Web Services, Google Cloud, Azure </li>
+      <li>Web server: Apache, Nginx</li>
+      <li>Containers & Orchestration: Docker, Kubernetes</li>
+      <li>CI/CD Tools: Jenkins, AWS CodePipeline, GitLab-CI, Github Action, Argo CD</li>
+      <li>Monitoring: Grafana, Prometheus</li>
+      <li>Logs Management:  ELK Stack</li>
+    </ul>
+  </section>
+  
+  <section class="max-w-5xl mx-auto px-6 py-12">
     <h2 class="text-2xl font-bold mb-8">Experience</h2>
     <div class="space-y-6">
       <div>
