--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
   </section>
 
   <section class="max-w-5xl mx-auto px-6 py-12">
+    <h2 class="text-2xl font-bold mb-4">EDUCATION</h2>
+    <ul class="list-disc ml-6">
+      <li>2006 – 2011: Hanoi University of Science and Technology</li>
+    </ul>
+  </section>
+  
+  <section class="max-w-5xl mx-auto px-6 py-12">
     <h2 class="text-2xl font-bold mb-4">SKILL</h2>
     <ul class="list-disc ml-6">
       <li>Languages: Bash, yaml</li>
@@ -57,7 +64,7 @@
       <li>Database: MySQL, RDS, Redis, Elasticsearch Clickhouse, Postgres </li>
       <li>Cloud Computing: Amazon Web Services, Google Cloud, Azure </li>
       <li>Web server: Apache, Nginx</li>
-      <li>Containers & Orchestration: Docker, Kubernetes</li>
+      <li>Containers & Orchestration: Docker, Kubernetes, EKS AWS</li>
       <li>CI/CD Tools: Jenkins, AWS CodePipeline, GitLab-CI, Github Action, Argo CD</li>
       <li>Monitoring: Grafana, Prometheus</li>
       <li>Logs Management:  ELK Stack</li>
@@ -111,7 +118,11 @@
         <p class="text-sm text-gray-600">System Engineer | Jun 2014 – Sep 2016</p>
         <ul class="list-disc ml-6 mt-2">
           <li>Deployed Nagios and Cacti monitoring systems.</li>
-          <li>Implemented CI/CD with Jenkins, Ansible, and Git.</li>
+          <li>Handled multiple Linux/CentOS servers for application deployment and management.</li>
+          <li>Supervised a team of developers and implemented automation tools such as Ansible, Jenkins and GIT for continuous integration.</li>
+          <li>Responsible for the creation of scripts using Python and Unix by hosting on application servers.</li>
+          <li>Troubleshoot and debug environment and infrastructure problems found in the production and non-production environments.</li>
+          <li>Worked on Docker container snapshots, attaching to a running container, removing images, managing directory structures and managing containers.</li>
         </ul>
       </div>
       <div>
@@ -124,7 +135,7 @@
       </div>
     </div>
   </section>
-
+  
   <section class="max-w-5xl mx-auto px-6 py-12">
     <h2 class="text-2xl font-bold mb-4">Certifications</h2>
     <ul class="list-disc ml-6">
