--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
       <li>2006 – 2011: Hanoi University of Science and Technology</li>
     </ul>
   </section>
+
+  <section class="max-w-5xl mx-auto px-6 py-12">
+    <h2 class="text-2xl font-bold mb-4">Certifications</h2>
+    <ul class="list-disc ml-6">
+      <li>AWS Certified Solutions Architect – Associate (2018)</li>
+      <li>AWS Certified SysOps Administrator – Associate (2021)</li>
+      <li>AWS Certified DevOps Engineer – Professional (2022)</li>
+    </ul>
+  </section>
   
   <section class="max-w-5xl mx-auto px-6 py-12">
     <h2 class="text-2xl font-bold mb-4">SKILL</h2>
@@ -131,27 +140,19 @@
         <ul class="list-disc ml-6 mt-2">
           <li>Managed corporate network infrastructure and data center servers.</li>
           <li>Configured VPNs, firewalls, AD, DNS, and DHCP services.</li>
+          <li>-	Operating network administrators troubleshoot problems related to system ensures continuous system operation and stability.</li>
+          <li>-	Extensive experience in dealing with network problems.</li>
+          <li>-	Design and management network core.</li>
+          <li>-	Developed firewall system on open source platforms like as Pfsence.</li>
         </ul>
       </div>
     </div>
-  </section>
-  
-  <section class="max-w-5xl mx-auto px-6 py-12">
-    <h2 class="text-2xl font-bold mb-4">Certifications</h2>
-    <ul class="list-disc ml-6">
-      <li>AWS Certified Solutions Architect – Associate (2018)</li>
-      <li>AWS Certified SysOps Administrator – Associate (2021)</li>
-      <li>AWS Certified DevOps Engineer – Professional (2022)</li>
-    </ul>
   </section>
 
   <section class="max-w-5xl mx-auto px-6 py-12 text-center">
     <h2 class="text-2xl font-bold mb-4">Contact</h2>
     <p>📧 <a href="mailto:minhchau.utc@gmail.com" class="text-blue-600 hover:underline">minhchau.utc@gmail.com</a></p>
-    <p class="mt-2">
-      <a href="https://github.com/chau-bui" target="_blank" class="text-gray-700 hover:text-black mx-2">GitHub</a> |
-      <a href="https://linkedin.com/in/chau-bui" target="_blank" class="text-gray-700 hover:text-black mx-2">LinkedIn</a>
-    </p>
+    <p>📧 <a href="mailto:minhchau.utc@gmail.com" class="text-blue-600 hover:underline">0973.839.006</a></p>
   </section>
 
   <footer class="bg-gray-100 py-6 text-center text-sm text-gray-600 border-t">
