--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
         <ul class="list-disc ml-6 mt-2">
           <li>Managed corporate network infrastructure and data center servers.</li>
           <li>Configured VPNs, firewalls, AD, DNS, and DHCP services.</li>
-          <li>-	Operating network administrators troubleshoot problems related to system ensures continuous system operation and stability.</li>
-          <li>-	Extensive experience in dealing with network problems.</li>
-          <li>-	Design and management network core.</li>
-          <li>-	Developed firewall system on open source platforms like as Pfsence.</li>
+          <li>Operating network administrators troubleshoot problems related to system ensures continuous system operation and stability.</li>
+          <li>Extensive experience in dealing with network problems.</li>
+          <li>Design and management network core.</li>
+          <li>Developed firewall system on open source platforms like as Pfsence.</li>
         </ul>
       </div>
     </div>
