--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <li>Web server: Apache, Nginx</li>
       <li>Containers & Orchestration: Docker, Kubernetes, EKS AWS.</li>
       <li>CI/CD Tools: Jenkins, AWS CodePipeline, GitLab-CI, Github Action, Argo CD.</li>
-      <li>Monitoring: Grafana, Prometheus.</li>
+      <li>Monitoring: Grafana, Prometheus, Jaeger.</li>
       <li>Logs Management:  ELK Stack.</li>
     </ul>
   </section>
@@ -101,7 +101,7 @@
           <li>Hands on with engineering teams to do daily production deployment.</li>
           <li>Monitoring system and write bash scripts.</li>
           <li>Containerization & Orchestration: Docker, Kubernetes, EKS.</li>
-          <li>Monitoring: Grafana, ELK.</li>
+          <li>Monitoring: Grafana, ELK,Jaeger.</li>
         </ul>
       </div>
       <div>
