--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="relative w-full h-72 bg-cover bg-center flex items-center justify-center text-white shadow-lg" style="background-image: url('https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&w=1400&q=80');">
     <div class="bg-black bg-opacity-50 p-8 rounded-xl">
       <h1 class="text-4xl font-bold mb-2">👋 I'm Chau Bui</h1>
-      <p class="text-lg">DevOps Engineer | Cloud Infrastructure | Site Reliability Engineering</p>
+      <p class="text-lg">DevOps Engineer | Cloud Infrastructure | System Admin</p>
     </div>
   </header>
 
@@ -57,7 +57,7 @@
   </section>
 
   <section class="max-w-5xl mx-auto px-6 py-12">
-    <h2 class="text-2xl font-bold mb-4">Certifications</h2>
+    <h2 class="text-2xl font-bold mb-4">CERTIFICATIONS</h2>
     <ul class="list-disc ml-6">
       <li>AWS Certified Solutions Architect – Associate (2018)</li>
       <li>AWS Certified SysOps Administrator – Associate (2021)</li>
@@ -81,15 +81,17 @@
   </section>
   
   <section class="max-w-5xl mx-auto px-6 py-12">
-    <h2 class="text-2xl font-bold mb-8">Experience</h2>
+    <h2 class="text-2xl font-bold mb-8">WORK EXPERIENCE</h2>
     <div class="space-y-6">
       <div>
-        <h3 class="font-semibold text-lg">Samsung Vietnam</h3>
+        <h3 class="font-semibold text-lg">Samsung SDS Vietnam</h3>
         <p class="text-sm text-gray-600">DevOps Engineer | Feb 2022 – Present</p>
         <ul class="list-disc ml-6 mt-2">
           <li>Built and maintained CI/CD pipelines using Jenkins, GitLab CI, and GitHub Actions.</li>
           <li>Deployed and managed scalable systems on AWS and on-premise.</li>
           <li>Implemented Kafka clusters, MinIO, Airbyte, and Lakehouse architectures.</li>
+          <li>Designed and implemented GitOps workflows for deploying microservices on Amazon EKS, K8S.</li>
+          <li>Setup, deployed and maintain the CI/CD pipelines for services, applications by Gitlab-CI, Jenkins.</li>
           <li>Automated infrastructure with Terraform & Ansible.</li>
           <li>Designed and deployed for data lakehouse system.</li>
           <li>Migration server and services to Cloud.</li>
